--- a/app/views/tasks/_fields.html.haml
+++ b/app/views/tasks/_fields.html.haml
@@ -20,13 +20,7 @@
         - comment_fields.object.uploads.build unless comment_fields.object.uploads.any?
         = comment_fields.fields_for :uploads do |uploads|
           = uploads.file_field :asset, :id => 'upload_file'
-      .private_options{ :style => 'display: none', 'object-prefix' => "conversation_new", 'object-type' => 'conversation' }
-        .option.normal
-          = f.radio_button :is_private, false, :checked => !f.object.is_private, :id => "task_new_public", :disabled => true
-          %label{ :for => "task_new_public" }= t('comments.private.public')
-        .option.private
-          = f.radio_button :is_private, true, :checked => f.object.is_private, :id => "task_new_private", :disabled => true
-          %label{ :for => "task_new_private" }= t('comments.private.private')
+      .private_options{ :style => 'display: none', 'object-prefix' => "task_new", 'object-type' => 'task' }
       .actions
         .attach
           %span= t('comments.fields.attach') + ": "
