Add the infamous "All" option for private watchers

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -169,6 +169,18 @@
         font-weight: normal
       input
         margin-right: 10px
+    .private_all
+      label
+        width: 170px
+        white-space: nowrap
+        overflow-x: hidden
+        display: inline-block
+        text-overflow: ellipsis
+        font-weight: bold
+      input
+        margin-right: 10px
+   
+   
 
 .add_watchers_box
   p
