css annoying thing

--- a/app/styles/_layout.sass
+++ b/app/styles/_layout.sass
@@ -138,12 +138,13 @@ p.flash-notice
   span
     position: absolute
     right: 0
+    top: 1px
     border-left: 1px solid #ddd
     height: 19px
     display: inline-block
     &#view_title
       right: none
-      left: 10px
+      left: 25px
       border: none
     a
       display: inline-block
