--- a/app/templates/search/results.haml
+++ b/app/templates/search/results.haml
@@ -6,7 +6,7 @@
   .result
     %div{ :class => '{{icon_class}}' }
     {{#project}}
-    %a{ :href => '{{url}}' } {{name}}
+    %a{ :href => '{{project_url}}' } {{name}}
     {{/project}}
     &rarr;
     %a{ :href => '{{url}}' } {{name}}
