--- a/app/templates/activities/page_create.haml
+++ b/app/templates/activities/page_create.haml
@@ -1,6 +1,6 @@
 .activity
   {{#user}}
-  <a href="{{url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
+  <a href="{{page_url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
   {{/user}}
   .activity_block
     .date
@@ -8,14 +8,14 @@
         {{time_ago updated_at}}
     %p
       {{#user}}
-      %a{ :href => "{{url}}" } {{full_name}}
+      %a{ :href => "{{page_url}}" } {{full_name}}
       {{/user}}
       created the page
       {{#target}}
-      %a{ :href => "{{url}}" } {{name}}
+      %a{ :href => "{{page_url}}" } {{name}}
       {{/target}}
       %span.project
         in the project
         {{#project}}
-        %a{ :href => "{{url}}" } {{name}}
+        %a{ :href => "{{page_url}}" } {{name}}
         {{/project}}
