--- a/app/templates/activities/project_create.haml
+++ b/app/templates/activities/project_create.haml
@@ -1,6 +1,6 @@
 .activity
   {{#user}}
-  <a href="{{url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
+  <a href="{{project_url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
   {{/user}}
   .activity_block
     .date
@@ -8,9 +8,9 @@
         {{time_ago updated_at}}
     %p
       {{#user}}
-      %a{ :href => "{{url}}" } {{full_name}}
+      %a{ :href => "{{user_url}}" } {{full_name}}
       {{/user}}
       created the project
       {{#target}}
-      %a{ :href => "{{url}}" } {{name}}
+      %a{ :href => "{{project_url}}" } {{name}}
       {{/target}}
