convert to task

--- a/app/views/layouts/backbone.haml
+++ b/app/views/layouts/backbone.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ :charset => "UTF-8" }
     %meta{ :'http-equiv' => "X-UA-Compatible", :content => "IE=edge" }
-    =# csrf_meta_tag
+    = csrf_meta_tag
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title= "Teambox"
     = include_stylesheets :application, :media => :screen
