--- a/app/templates/activities/task_list_create.haml
+++ b/app/templates/activities/task_list_create.haml
@@ -1,6 +1,6 @@
 .activity
   {{#user}}
-  <a href="{{task_list_url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
+  <a href="{{user_url}}" class="micro_avatar" style="background: url({{micro_avatar_url}}) no-repeat"></a>
   {{/user}}
   .activity_block
     .date
@@ -8,7 +8,7 @@
         {{time_ago updated_at}}
     %p
       {{#user}}
-      %a{ :href => "{{task_list_url}}" } {{full_name}}
+      %a{ :href => "{{user_url}}" } {{full_name}}
       {{/user}}
       created the task list
       {{#target}}
@@ -17,5 +17,5 @@
       %span.project
         in the project
         {{#project}}
-        %a{ :href => "{{task_list_url}}" } {{name}}
+        %a{ :href => "{{project_url}}" } {{name}}
         {{/project}}
