--- a/app/templates/partials/thread.haml
+++ b/app/templates/partials/thread.haml
@@ -39,7 +39,7 @@
   {{#first_comment}}{{> comment}}{{/first_comment}}
   {{#if hidden_comments_count}}
   .more_comments
-    %a{ :href => "/activities/{{id}}/show_thread?thread_type={{type}}", :'data-remote' => "true" }
+    %a{ :href => "/activities/{{id}}/show_thread?thread_type={{type}}" }
     Show {{hidden_comments_count}} previous comments
   {{/if}}
   {{#recent_comments}}{{> comment}}{{/recent_comments}}
