load people on projects on bootrapping. watchers box now shows all the people within the project

--- a/app/templates/partials/comment_form.haml
+++ b/app/templates/partials/comment_form.haml
@@ -32,7 +32,7 @@
       {{#if is_task}}
       %a{:href => '#hours', :class => 'add_hours_icon hoverable', :title => 'Log hours'} Add hours to this task
       {{/if}}
-      %a{:href => '#watchers', :class => 'add_watchers hoverable', :title => 'Notify people'} Watchers
+      %a{:href => '#', :class => 'add_watchers hoverable', :title => 'Notify people'} Watchers
 
     {{#if is_task}}
     .task_actions
