--- a/app/views/pages/edit.haml
+++ b/app/views/pages/edit.haml
@@ -1,6 +1,6 @@
 %h2= t('.title')
 
-= form_for [@current_project,@page] do |f|
+= form_for [@current_project,@page], :html => {'data-creator-user-id' => @page.user_id, 'data-watcher-ids' => @page.watcher_ids.join(','), 'data-project-id' => @page.project_id, :class => (@page.is_private ? 'edit_page private' : 'edit_page')} do |f|
   = page_fields(f)
 
   .submit
