--- a/app/views/pages/show.haml
+++ b/app/views/pages/show.haml
@@ -1,9 +1,11 @@
 = page_column(@current_project,@pages,@page)
 
 = people_watching(@current_project,current_user,@page)
-.page_header
+.page_header{:class => (@page.is_private ? 'private' : '')}
   = page_action_links(@current_project,@page)
-  %h2=h @page
+  %h2
+    .lock_icon
+    =h @page
   .description=h @page.description
 
 = page_buttons(@current_project,@page)
