--- a/app/templates/partials/upload_area.haml
+++ b/app/templates/partials/upload_area.haml
@@ -1,2 +1,2 @@
 %p Select a file to upload to Teambox
-%input{:id => 'upload_file', :name => 'task[comments_attributes][0][uploads_attributes][0][asset]', :type => 'file'}
+%input{:id => 'upload_file', :name => 'assets[]', :type => 'file'}
