--- a/app/views/cards/_fields.haml
+++ b/app/views/cards/_fields.haml
@@ -1,3 +1,3 @@
 = f.fields_for :card, f.object.card do |sf|
   - for field in fields
-    = render_card_field(sf,field)
+    = render 'cards/field', :f => sf, :field => field
