--- a/app/templates/partials/comment_form.haml
+++ b/app/templates/partials/comment_form.haml
@@ -11,7 +11,7 @@
   .field.text_field.hours_field{ :style => "display: none" }
     %label
       How many hours did you put into this task?
-      %input{:id => 'task_comments_attributes_0_human_hours', :name => 'human_hours', :size => '30', :type => 'text'}
+      %input{:class => 'human_hours', :name => 'human_hours', :size => '30', :type => 'text'}
     %a{:href => 'http://help.teambox.com/faqs/advanced-features/time-tracking', :target => '_blank'} Learn more.
   {{/if}}
 
