--- a/app/templates/partials/comment.haml
+++ b/app/templates/partials/comment.haml
@@ -24,7 +24,10 @@
           {{full_name}}
         {{/user}}
         <!-- TODO: due on transition -->
-        <!-- TODO: hours logged for time tracking -->
+        {{#context_if hours this}}
+        %span.hours {{human_hours hours}}
+        {{/context_if}}
+
         {{status_transition}}
       {{#assigned}}
       %p.assigned_transition Assigned to {{full_name user}}
