Adding option to delete custom logo for orgs

--- a/app/views/organizations/_appearance_fields.haml
+++ b/app/views/organizations/_appearance_fields.haml
@@ -4,6 +4,10 @@
     = f.file_field :logo
   %img.logo_square{ :src => @organization.logo.url(:square) }
   %img.logo_top{ :src => @organization.logo.url(:top) }
+  - if @organization.logo.file?
+    .option
+      = f.check_box :delete_logo
+      = f.label :delete_logo, t('.delete_custom_logo')
 
 .text_area
   %label= t('.description_html')
