--- a/app/views/users/feeds.haml
+++ b/app/views/users/feeds.haml
@@ -16,7 +16,7 @@
 
 - content_for :column do
   %h2= t('.feed_reader.title')
-  %p= t('.feed_reader.body_html', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds")
+  %p= t('.feed_reader.body_html', :link => "http://help.teambox.com/knowledgebase/articles/10257-access-teambox-from-more-devices")
   
   %h2= t('.more_tips.title')
-  %p= t('.more_tips.body_html', :link => "http://help.teambox.com/faqs/more-ways-to-access-teambox/sync-tools#feeds")
+  %p= t('.more_tips.body_html', :link => "http://help.teambox.com/knowledgebase/articles/10257-access-teambox-from-more-devices")
