bug on comment_form reset

--- a/app/templates/partials/comment_form.haml
+++ b/app/templates/partials/comment_form.haml
@@ -3,7 +3,7 @@
 .field.text_area
   %a.micro_avatar.my_avatar
   .textarea
-    %textarea{:cols => '40', :name => '{{downcase type}}[comments_attributes][0][body]', :placeholder => 'Define what needs to be done, assign this task to somebody.', :rows => '20', :autocomplete => 'off', :style => ''}
+    %textarea{:cols => '40', :name => '{{downcase type}}[comments_attributes][0][body]', :placeholder => 'Define what needs to be done, assign this task to somebody.', :rows => '20', :autocomplete => 'off'}
     .autocomplete{ :style => "display: none" }
 
 .extra{ :style => "display: none" }
