Basic uploading working
* Existing bugs:

  * only html5 engine in chrome tested.
  * takes over submit button if file attached but doesn't give back control.

--- a/app/templates/partials/upload_area.haml
+++ b/app/templates/partials/upload_area.haml
@@ -1,2 +1,4 @@
+%div{:id => "file_list_{{downcase type}}_{{id}}"}
+%ol{:class => 'file_list'}
 %p Select a file to upload to Teambox
-%input{:id => 'upload_file', :name => 'uploads_attributes[0][asset]', :type => 'file'}
+%button{:id => 'upload_file_{{downcase type}}_{{id}}', :class => 'upload_file_button'}
