Some CSS niceness so it's nicer to the eyes

--- a/app/styles/_actions_menu.sass
+++ b/app/styles/_actions_menu.sass
@@ -16,6 +16,7 @@
       display: block
   .actiondate
     cursor: default
+    display: inline
   .extra
     display: none
     position: absolute
