--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -259,8 +259,6 @@ form.new_task, form.edit_task, .task_list_form
           color: #555
       .taskName
         a
-          background-repeat: no-repeat
-          padding-left: 20px
           &.loading
             background-image: url(/images/loading.gif)
 
@@ -412,3 +410,7 @@ p.view_for_all
       padding: 3px
       margin: 0
 
+.group
+  font-size: 13px
+  font-weight: bold
+  margin: 20px 0 6px
