--- a/app/templates/partials/thread.jade.erb
+++ b/app/templates/partials/thread.jade.erb
@@ -22,9 +22,9 @@
       a(href= self.project.project_url, data-project-id= self.project.id)= self.project.name
 
     - if (self.is_task)
-    .task_summary
-      != self.status_transition()
-      = 'Assigned to ' + self.full_name(self.user)
+      .task_summary
+        != self.status_transition()
+        = 'Assigned to ' + self.full_name(self.user)
 
     - if (self.last_comment)
       p.excerpt
@@ -32,7 +32,8 @@
         = self.last_comment.body
   .clear
 .comments
-  != self.partial('partials.comment', self.first_comment)
+  - if (self.first_comment)
+    != self.partial('partials.comment', self.first_comment)
 
   - if (self.hidden_comments_count)
     .more_comments
