--- a/app/templates/partials/upload_area.jade.erb
+++ b/app/templates/partials/upload_area.jade.erb
@@ -1,5 +1,5 @@
 div(id="file_list_#{self.type.toLowerCase()}_#{self.id}")
 ol(class='file_list')
-p Select a file to upload to Teambox
+p <%= t('uploads.new.select_a_file') %>
 button(id='upload_file_#{self.type.toLowerCase()}_#{self.id}', class='upload_file_button')
   | <%= t('comments.uploads.button') %>
