--- a/app/styles/_uploads.sass
+++ b/app/styles/_uploads.sass
@@ -114,3 +114,9 @@ $upload_icon_width: 16px
   padding: 1px
   &:hover
     border: 1px solid rgb(160, 160, 160)
+.filedrop
+  &:hover
+    border: 1px dashed rgb(230, 230, 230)
+.filedroppable
+  /* TODO: Someone makes this look nice... */
+  background-color: green
