refactored and jaded search

--- a/app/views/layouts/backbone.haml
+++ b/app/views/layouts/backbone.haml
@@ -24,7 +24,7 @@
         %a{ :href => "http://teambox.com" }
           Go back to normal Teambox.
     #header_wrap
-      = header
+      = render 'shared/header'
     =# configure_this_organization
     -# container and wrapper are useless with the current layout
     -# i'm keeping them because we need to make sure it doesn't break the JS
